--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/swagger": "^7.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
