--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3.8'
 
 services:
+  app:
+      image: node:18
+      container_name: node_app
+      working_dir: /usr/src/app
+      volumes:
+        - .:/usr/src/app
+      ports:
+        - "3000:3000"
+      command: ["npm", "run", "start:dev"]
+      env_file:
+      - ./.env.development
   postgres:
     image: postgres:latest
     container_name: postgres
